soc net react deplot

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://MaDM908.github.io/social-network-react",
+  "homepage": "https://MaDM908.github.io/social-network-react",
   "name": "mern-app",
   "version": "0.1.0",
   "private": true,
