--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
     ]
   },
   "description": "My yarn ",
-  "main": "index.js",
+  "main": "index.js", 
   "author": "MaDM908",
   "license": "MIT",
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "remote-redux-devtools": "^0.5.16"
   }
 }
